| Summary: | ASTERISK-25622: WARNING for "JABBER: socket read error" should be more specific | ||
| Reporter: | Sean Darcy (seandarcy) | Labels: | |
| Date Opened: | 2015-12-10 09:28:51.000-0600 | Date Closed: | 2017-03-24 11:56:50 |
| Priority: | Minor | Regression? | No |
| Status: | Closed/Complete | Components: | Resources/res_xmpp |
| Versions: | 11.20.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Fedora 22 x86-64 | Attachments: | |
| Description: | The logs have xmpp read errors every hour or so:
WARNING[5873]: res_xmpp.c:3636 xmpp_client_thread: JABBER: socket read error We have 25 xmpp connections. It would be very helpful if these warnings would contain the connection that is generating the errror. For instance: WARNING[5873]: res_xmpp.c:3636 xmpp_client_thread: JABBER: socket read error on connection abcd | ||
| Comments: | By: Asterisk Team (asteriskteam) 2015-12-10 09:28:52.646-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Rusty Newton (rnewton) 2015-12-10 19:20:37.544-0600 Improvements and new features are not accepted without a patch. You can checkout the guidelines linked above for more detail. I'm going to change this particular issue to a bug as that WARNING seems pretty useless without additional specificity. By: Friendly Automation (friendly-automation) 2017-03-24 11:56:51.307-0500 Change 5292 merged by zuul: res_xmpp: Include client name in connection related error messages [https://gerrit.asterisk.org/5292|https://gerrit.asterisk.org/5292] By: Friendly Automation (friendly-automation) 2017-03-24 11:56:55.119-0500 Change 5291 merged by zuul: res_xmpp: Include client name in connection related error messages [https://gerrit.asterisk.org/5291|https://gerrit.asterisk.org/5291] By: Friendly Automation (friendly-automation) 2017-03-24 12:02:32.780-0500 Change 5284 merged by zuul: res_xmpp: Include client name in connection related error messages [https://gerrit.asterisk.org/5284|https://gerrit.asterisk.org/5284] | ||